--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Nueces de Chocolate</title>
     <!-- Importamos fuentes de Google Fonts: Poppins (textos) y Great Vibes (títulos navideños) -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Great+Vibes&display=swap" rel="stylesheet">
+   <!-- FAVICON: Icono de regalo para la pestaña del navegador -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎁</text></svg>">
     <!-- Iconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- Css -->
@@ -191,4 +193,5 @@
         });
     </script>
 </body>
+
 </html>
