--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         <div class="gallery-grid">
             <div class="gallery-item">
                 <!-- Usamos la imagen de Chocolate Negro (ID 0) como ejemplo de caja individual -->
+               <div class="price-badge">12€</div>
                 <img src="img/400g.png" alt="Caja 400g">
                 <div class="gallery-caption">
                     <h3>Caja 400g</h3> <!-- Corregido el typo de kg a g -->
@@ -91,6 +92,7 @@
                 </div>
             </div>
             <div class="gallery-item">
+               <div class="price-badge">12€</div>
                 <!-- NUEVA IMAGEN GENERADA: Caja Mixta (ID 12) -->
                 <img src="img/Sabor Mixto.png" alt="Caja Mixta">
                 <div class="gallery-caption">
@@ -99,6 +101,7 @@
                 </div>
             </div>
             <div class="gallery-item">
+               <div class="price-badge">22€</div>
                 <!-- Usamos la imagen de Chocolate con Leche (ID 2) para el pack por ahora -->
                 <img src="img/pack-sabores.png" alt="Pack de Sabores">
                 <div class="gallery-caption">
@@ -194,6 +197,7 @@
 </body>
 
 </html>
+
 
 
 
