--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                <div class="price-badge">12€</div>
                 <img src="img/400g.png" alt="Caja 400g">
                 <div class="gallery-caption">
-                    <h3>Caja 400g</h3> <!-- Corregido el typo de kg a g -->
-                    <p>Elije tu sabor favorito.(400g)</p> 
+                    <h3>Caja de Sabor</h3> <!-- Corregido el typo de kg a g -->
+                    <p>Elije tu chocolate favorito.(400g.Aprox)</p> 
                 </div>
             </div>
             <div class="gallery-item">
@@ -97,16 +97,16 @@
                 <img src="img/Sabor Mixto.png" alt="Caja Mixta">
                 <div class="gallery-caption">
                     <h3>Caja Mixta</h3>
-                    <p>Nueces de muchas variedades de chocolates.(400g)</p>
+                    <p>Nueces de muchas variedades de chocolates.(400g.Aprox)</p>
                 </div>
             </div>
             <div class="gallery-item">
-               <div class="price-badge">22€</div>
+               <div class="price-badge">12€</div>
                 <!-- Usamos la imagen de Chocolate con Leche (ID 2) para el pack por ahora -->
                 <img src="img/pack-sabores.png" alt="Pack de Sabores">
                 <div class="gallery-caption">
                     <h3>Pack de Sabores</h3>
-                    <p>Perfectas para golosos.(x2/400g)</p>
+                    <p>Perfectas para golosos, nueces de los 3 sabores.(400g.Aprox)</p>
                 </div>
             </div>
         </div>
@@ -197,6 +197,7 @@
 </body>
 
 </html>
+
 
 
 
